--- a/OKC_Thunder_DSS_Project/OKC_Thunder_DSS_Project_TEST.Rmd
+++ b/OKC_Thunder_DSS_Project/OKC_Thunder_DSS_Project_TEST.Rmd
@@ -64,6 +64,46 @@ normalize_stats <- function (data) {
   return(data)
 }
 
+simulate_all_nba <- function(data) {
+  df.forecast<-data
+  for (year in 2020:2034) {
+    df.temp <- forecast_next_year_stats(df.forecast[which(df.forecast$Season==(year-1)),],
+                                        df.forecast[which(df.forecast$Season==(year-2)),],
+                                        df.forecast[which(df.forecast$Season==(year-3)),])
+    df.forecast <- rbind(df.forecast,df.temp)
+  }
+  
+  df.forecast.normalize <- normalize_stats(df.forecast)
+  
+  for (year in 2020:2034) {
+    train_guard_set <- df.forecast.normalize[which(df.forecast.normalize$Season<year & df.forecast.normalize$Pos %in% c("PG","SG")),]
+    train_center_set <- df.forecast.normalize[which(df.forecast.normalize$Season<year & df.forecast.normalize$Pos %in% c("C")),]
+    full_model_guard <- glm(TotalAllNba ~ GP+GS+MP+Age+FGM+FGA+FGperc+ThreePM+ThreePA+ThreePperc+TwoPM+TwoPA+TwoPperc+
+                                          eFGperc+FTM+FTA+FTperc+ORB+DRB+TRB+AST+STL+BLK+TOV+PF+PTS,
+                                data = train_guard_set, family = binomial(link="logit"))
+    red_model_guard <- step(full_model_guard,trace=0)
+    full_model_center <- glm(TotalAllNba ~ GP+GS+MP+Age+FGM+FGA+FGperc+ThreePM+ThreePA+ThreePperc+TwoPM+TwoPA+TwoPperc+
+                                          eFGperc+FTM+FTA+FTperc+ORB+DRB+TRB+AST+STL+BLK+TOV+PF+PTS,
+                                data = train_center_set, family = binomial(link="logit"))
+    red_model_center <- step(full_model_center,trace=0)
+    test_guard_set <- df.forecast.normalize[which(df.forecast.normalize$Season==year & df.forecast.normalize$Pos %in% c("PG","SG")),]
+    test_center_set <- df.forecast.normalize[which(df.forecast.normalize$Season==year & df.forecast.normalize$Pos %in% c("C")),]
+    pred_guard <- predict(red_model_guard,newdata = test_guard_set,type = "response")
+    pred_center <- predict(red_model_center,newdata = test_center_set,type = "response")
+    all_nba_guard <- test_guard_set[which(pred_guard >= pred_guard[order(pred_guard,decreasing=TRUE)][6]),]
+    for (index in 1:dim(all_nba_guard)[1]) {
+      player <- all_nba_guard[index,]
+      df.forecast.normalize[which(df.forecast.normalize$Player == player$Player & df.forecast.normalize$Season == year),]$TotalAllNba <- 1
+    }
+    all_nba_center <- test_center_set[which(pred_center >= pred_center[order(pred_center,decreasing=TRUE)][3]),]
+    for (index in 1:dim(all_nba_center)[1]) {
+      player <- all_nba_center[index,]
+      df.forecast.normalize[which(df.forecast.normalize$Player == player$Player & df.forecast.normalize$Season == year),]$TotalAllNba <- 1
+    }
+  }
+return(df.forecast.normalize)
+}
+
 forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_years_ago_data) {
   df <- last_year_data[0,]
   mp_last_year <- sum(last_year_data$MP)
@@ -112,21 +152,21 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
   for (index in 1:dim(last_year_data)[1]) {
     player <- last_year_data[index,]
     df.player <- last_year_data[0,]
-    # stop forecasting players who have been in the league for 15 years or more 
-    if (player$YearsInNba < 15) {
+    # stop forecasting players who have been in the league for 17 years or more 
+    if (player$YearsInNba < 17 & player$PTS > 0) {
       if (player$Age <= 28) {
         age_adj <- (28 - player$Age)*0.004
       } else {
         age_adj <- (28 - player$Age)*0.002
       }
-      # add ~5 game noise (assumption made that players will consitently play about the same amount as the season before)
+      # add ~4 game noise (assumption made that players will consitently play about the same amount as the season before)
       # unfortunate for players who were injured in one of the prior years because their projections will be based
       # off the time they weren't injured and could play. However, this does capture the effect of a players durability year-to-year
       # so I am fine with making this assumption
-      player_proj_gp <- max(0,round(min(82,player$GP + rnorm(1,0,5)),digits=0))
-      player_proj_gs <- max(0,round(min(player_proj_gp,player$GS + rnorm(1,0,5)),digits=0))
+      player_proj_gp <- max(0,round(min(82,player$GP + rnorm(1,0,4)),digits=0))
+      player_proj_gs <- max(0,round(min(player_proj_gp,player$GS + rnorm(1,0,4)),digits=0))
       # All-NBA players play about 35 minutes per game
-      player_proj_mp <- max(0,round(min(player_proj_gp*48,player$MP + rnorm(1,0,5*35)),digits=0))
+      player_proj_mp <- max(0,round(min(player_proj_gp*48,player$MP + rnorm(1,0,4*35)),digits=0))
       if (player$Player %in% three_years_ago_data$Player & player$Player %in% two_years_ago_data$Player &
           player$Player %in% last_year_data$Player) {
         player_mp_last_year <- last_year_data[which(last_year_data$Player == player$Player),]$MP
@@ -237,15 +277,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
-        player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,digits=3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_twopperc <- ifelse(player_proj_twopa==0,0,round(player_proj_twopm/player_proj_twopa,digits=3))
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       } else if (player$Player %in% two_years_ago_data$Player & player$Player %in% last_year_data$Player & !(player$Player %in% three_years_ago_data$Player)) {
         player_mp_last_year <- last_year_data[which(last_year_data$Player == player$Player),]$MP
@@ -326,15 +366,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
-        player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,digits=3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_twopperc <- ifelse(player_proj_twopa==0,0,round(player_proj_twopm/player_proj_twopa,digits=3))
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       } else if (player$Player %in% last_year_data$Player & !(player$Player %in% two_years_ago_data$Player) & !(player$Player %in% three_years_ago_data$Player)) {
         player_mp_last_year <- last_year_data[which(last_year_data$Player == player$Player),]$MP
@@ -389,15 +429,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
         player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         # Projected points are computed using projected field goals made, projected 3-point field goals made, and projected free throws made
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       } else if (player$Player %in% three_years_ago_data$Player & player$Player %in% last_year_data$Player & !(player$Player %in% two_years_ago_data$Player)) {
@@ -479,15 +519,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
-        player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,digits=3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_twopperc <- ifelse(player_proj_twopa==0,0,round(player_proj_twopm/player_proj_twopa,digits=3))
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       } else if (player$Player %in% three_years_ago_data$Player & player$Player %in% two_years_ago_data$Player & !(player$Player %in% last_year_data$Player)) {
         player_mp_two_years_ago <- two_years_ago_data[which(two_years_ago_data$Player == player$Player),]$MP
@@ -568,15 +608,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
-        player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,digits=3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_twopperc <- ifelse(player_proj_twopa==0,0,round(player_proj_twopm/player_proj_twopa,digits=3))
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       } else if (player$Player %in% two_years_ago_data$Player & !(player$Player %in% last_year_data$Player) & !(player$Player %in% three_years_ago_data$Player)) {
         player_mp_two_years_ago <- two_years_ago_data[which(two_years_ago_data$Player == player$Player),]$MP
@@ -627,15 +667,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
-        player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,digits=3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_twopperc <- ifelse(player_proj_twopa==0,0,round(player_proj_twopm/player_proj_twopa,digits=3))
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       } else if (player$Player %in% three_years_ago_data$Player & !(player$Player %in% last_year_data$Player) & !(player$Player %in% two_years_ago_data$Player)) {
         player_mp_three_years_ago <- three_years_ago_data[which(three_years_ago_data$Player == player$Player),]$MP
@@ -686,15 +726,15 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
         player_proj_tov <- round((weighted_tov+league_avg_weighted_tov) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_pf <- round((weighted_pf+league_avg_weighted_pf) / (weighted_minutes_played+1000) * player_proj_mp * (1-age_adj),digits=0)
         player_proj_fga <- player_proj_fgm+player_proj_fg_miss
-        player_proj_fgperc <- round(player_proj_fgm/player_proj_fga,digits=3)
+        player_proj_fgperc <- ifelse(player_proj_fga==0,0,round(player_proj_fgm/player_proj_fga,digits=3))
         player_proj_threepa <- player_proj_threepm+player_proj_threep_miss
-        player_proj_threepperc <- round(player_proj_threepm/player_proj_threepa,digits=3)
+        player_proj_threepperc <- ifelse(player_proj_threepa==0,0,round(player_proj_threepm/player_proj_threepa,digits=3))
         player_proj_fta <- player_proj_ftm+player_proj_ft_miss
-        player_proj_ftperc <- round(player_proj_ftm/player_proj_fta,digits=3)
+        player_proj_ftperc <- ifelse(player_proj_fta==0,0,round(player_proj_ftm/player_proj_fta,digits=3))
         player_proj_twopm <- player_proj_fgm-player_proj_threepm
         player_proj_twopa <- player_proj_fga-player_proj_threepa
-        player_proj_twopperc <- round(player_proj_twopm/player_proj_twopa,digits=3)
-        player_proj_efgperc <- round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3)
+        player_proj_twopperc <- ifelse(player_proj_twopa==0,0,round(player_proj_twopm/player_proj_twopa,digits=3))
+        player_proj_efgperc <- ifelse(player_proj_fga==0,0,round((player_proj_fgm+0.5*player_proj_threepm)/player_proj_fga,digits=3))
         player_proj_pts <- 3*player_proj_threepm + 2*player_proj_twopm + 1*player_proj_ftm
       }
       df.player <- data.frame(Player=player$Player,Rk=player$Rk,Pos=player$Pos,Tm=player$Tm,Season=player$Season+1,TotalAllNba=0,
@@ -704,9 +744,12 @@ forecast_next_year_stats <- function(last_year_data,two_years_ago_data,three_yea
                      FTM=player_proj_ftm,FTA=player_proj_fta,FTperc=player_proj_ftperc,ORB=player_proj_orb,DRB=player_proj_drb,
                      TRB=player_proj_trb,AST=player_proj_ast,STL=player_proj_stl,BLK=player_proj_blk,TOV=player_proj_tov,
                      PF=player_proj_pf,PTS=player_proj_pts,DraftYear=player$DraftYear,YearsInNba=player$YearsInNba+1)
+      if (player_proj_gp >= 48) {
+        df <- rbind(df,df.player)
+      }
     }
-    df <- rbind(df,df.player)
   }
+  df <- df[,c(1,2,3,4,5,33,seq(6,32),34)]
   return(df)
 }
 
@@ -1049,7 +1092,7 @@ hist.totals.PTS
 # filtered datapoints based on Games Played, so considered players who have more than 48 games played
 # rather than minutes played because you may have players who play 28 minutes per game but 
 # only play 20 games, for example 
-data_player_totals_filtered <- data_player_totals[which(data_player_totals$GP>=48),]
+data_player_totals_filtered <- data_player_totals[which(data_player_totals$GP>=48),c(1:34)]
 ```
 
 ```{r Data Analysis: Part 5 - Correlation of Filtered Data}
@@ -1242,62 +1285,66 @@ legend("bottomright",c("Guards","Forwards","Centers"),
 # accurately predicting the All-NBA centers 81.7% of the time, on average, from 2000-2019. I'll choose to use the Logistic
 # model with advanced stats to stick with because its the simpler model but still performing the best
 ```
-```{r Forecasting}
-data_2019 <- data_player_totals[which(data_player_totals$Season == 2019 & data_player_totals$GP>=48),]
-data_2018 <- data_player_totals[which(data_player_totals$Season == 2018 & data_player_totals$GP>=48),]
-data_2017 <- data_player_totals[which(data_player_totals$Season == 2017 & data_player_totals$GP>=48),]
-data_2020 <- forecast_next_year_stats(data_2019,data_2018,data_2017)
-data_2021 <- forecast_next_year_stats(data_2020,data_2019,data_2018)
-data_2022 <- forecast_next_year_stats(data_2020,data_2019,data_2018)
-```
 
-
-```{r Prediction}
+```{r Prediction, message=FALSE, warning=FALSE}
 # get the predictions for Luka Doncic, Karl Anthony-Towns, Kyrie Irving, Stephen Curry and make the predictions
 # I make quite a few assumptions to answer the question at hand: the average career length for an All-NBA player,
 # assume that each player will continue to perform at the same caliber as last season for the rest of their career,
 # and that the number of All-NBA selections for any given player at any point in their NBA career follows a 
 # Binomial distribution with parameters n = # remaining seasons and p = probability of making All-NBA team last season
-guard_data_total_2019 <- guard_data_totals[which(guard_data_totals$Season == 2019),]
-center_data_adv_2019 <- center_data_adv[which(center_data_adv$Season == 2019),]
 
-guard_2019_pred <- predict(log.guard.total.reduced,newdata = guard_data_total_2019,type = "response")
-center_2019_pred <- predict(log.center.adv.reduced,newdata = center_data_adv_2019,type = "response")
-
-# I should scale the predictions from the model because the the top 6 guards/forwards & top 3 centers 
-# should have a probability of 1, so I'll divide the predictions by the 6th highest predication
-luka_doncic_pred <- min(1, guard_2019_pred[which(guard_data_total_2019$Player=="Luka Dončić")] / 
-                           guard_2019_pred[order(guard_2019_pred,decreasing=TRUE)][6])
-kyrie_irving_pred <- min(1, guard_2019_pred[which(guard_data_total_2019$Player=="Kyrie Irving")] / 
-                            guard_2019_pred[order(guard_2019_pred,decreasing=TRUE)][6])
-steph_curry_pred <- min(1, guard_2019_pred[which(guard_data_total_2019$Player=="Stephen Curry")] / 
-                           guard_2019_pred[order(guard_2019_pred,decreasing=TRUE)][6])
-kat_pred <- min(1, center_2019_pred[which(center_data_adv_2019$Player=="Karl-Anthony Towns")] / 
-                   center_2019_pred[order(center_2019_pred,decreasing=TRUE)][3])
-
-luka_doncic_pred <- predict(log.guard.total.reduced,newdata=luka_doncic,type="response")
-kyrie_irving_pred <- predict(log.guard.total.reduced,newdata=kyrie_irving,type="response")
-steph_curry_pred <- predict(log.guard.total.reduced,newdata=steph_curry,type="response")
-kat_pred <- predict(log.center.adv.reduced,newdata = kat,type="response")
-
-all_nba_career_years <- read.csv("all_nba_awards/all_nba_career_years.csv", header = TRUE, stringsAsFactors = FALSE)
-retired_all_nba <- all_nba_career_years[which(all_nba_career_years$Retired =="Y"),]
-avg_career_length <- round(mean(retired_all_nba$Years.in.NBA, didgits=0))
-
-# years in NBA: (Doncic = 1, Kyrie = 8, Steph = 10, Kat = 4)
-luka_doncic_years <- avg_career_length - 1
-kyrie_irving_years <- avg_career_length - 8
-steph_curry_years <- avg_career_length - 10
-kat_years <- avg_career_length - 4
+# this simulates the stats for NBA players over the next 15 seasons
+set.seed(24)
+df.forecast <- simulate_all_nba(data_player_totals_filtered)
 
 # Total number of All-NBA selections remaining in each of player's career
-luka <- luka_doncic_years*luka_doncic_pred
-kyrie <- kyrie_irving_years*kyrie_irving_pred
-steph <- steph_curry_years*steph_curry_pred
-kat <- kat_years*kat_pred
-
+luka <- dim(df.forecast[which(df.forecast$Player=="Luka Dončić"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+kyrie <- dim(df.forecast[which(df.forecast$Player=="Kyrie Irving"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+steph <- dim(df.forecast[which(df.forecast$Player=="Stephen Curry"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+kat <- dim(df.forecast[which(df.forecast$Player=="Karl-Anthony Towns"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
 ```
 
+```{r Simulation, message=FALSE, warning=FALSE}
+seeds <- sample(1:10000,10000)
+luka_most <- 0
+kyrie_most <- 0
+steph_most <- 0
+kat_most <- 0
+sim_results <- data.frame(Seed=int(),Luka=int(),Kyrie=int(),Steph=int(),Kat=int())
+for (i in seeds) {
+  set.seed(i)
+  df.forecast <- simulate_all_nba(data_player_totals_filtered)
+  luka <- dim(df.forecast[which(df.forecast$Player=="Luka Dončić"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+  kyrie <- dim(df.forecast[which(df.forecast$Player=="Kyrie Irving"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+  steph <- dim(df.forecast[which(df.forecast$Player=="Stephen Curry"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+  kat <- dim(df.forecast[which(df.forecast$Player=="Karl-Anthony Towns"&df.forecast$TotalAllNba==1&df.forecast$Season>=2020),])[1]
+  
+  if (luka>kyrie&luka>steph&luka>kat) {
+    luka_most = luka_most + 1
+  } else if (kyrie>luka&kyrie>steph&kyrie>kat) {
+    kyrie_most = kyrie_most + 1
+  } else if (steph>luka&steph>kyrie&steph>kat) {
+    steph = steph + 1
+  } else if (kat>luka&kat>kyrie&kat>steph) {
+    kat = kat + 1
+  } else {
+    if (luka=max(luka,kyrie,steph,kat)) {
+      luka_most = luka_most + 1
+    }
+    if (kyrie=max(luka,kyrie,steph,kat)) {
+      kyrie_most = kyrie_most + 1
+    }
+    if (steph=max(luka,kyrie,steph,kat)) {
+      steph_most = steph_most + 1
+    }
+    if (kat=max(luka,kyrie,steph,kat)) {
+      kat_most = kat_most + 1
+    }
+  }
+  
+  rbind(sim_results,data.frame(Seed=i,Luka=luka,Kyrie=kyrie,Steph=steph,Kat=kat))
+}
+```
 
 ```{r Further Considerations}
 ```
